--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <option value="ru">🇷🇺 Русский</option>
     <option value="en">🇺🇸 English</option>
   </select>
-
+    <button>
+      <a href="">Викторина</a>
+    </button>
   <div class="nav-buttons">
     <button id="scroll-left">⏪</button>
     <button id="scroll-right">⏩</button>
