--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <option value="en">🇺🇸 English</option>
   </select>
     <button>
-      <a href="">Викторина</a>
+      <a href="" Style="margin:0 auto; ">Викторина</a>
     </button>
   <div class="nav-buttons">
     <button id="scroll-left">⏪</button>
