--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <option value="ru">🇷🇺 Русский</option>
     <option value="en">🇺🇸 English</option>
   </select>
-    <button>
-      <a href=""; Style="margin:0 auto; ">
+    <button Style="margin: 0 auto; Display: flex; ">
+      <a href="">
         Викторина
       </a>
     </button>
