--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <option value="en">🇺🇸 English</option>
   </select>
     <button Style="margin: 0 auto; Display: flex; ">
-      <a href="">
+      <a href=""; Style="">
         Викторина
       </a>
     </button>
