--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <option value="ru">🇷🇺 Русский</option>
     <option value="en">🇺🇸 English</option>
   </select>
-    <button Style="margin: 0 auto; Display: flex; ">
-      <a href="" Style="Text-decoration: none;">
-        Викторина
+    <button 
+      Style="margin: 0 auto;
+            Display: flex;
+            background: #00e0ff;
+            height: 35px;
+            width: 170px;
+            border-radius: 8px;">
+      <a href="" Style="Text-decoration: none;
+                        color: white;">
+        <p>Викторина</p>
       </a>
     </button>
   <div class="nav-buttons">
