--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
   </select>
     <button 
       Style="margin: 0 auto;
-            Display: flex;
-            background: #00e0ff;
-            height: 35px;
-            width: 170px;
-            border-radius: 8px;">
+   Display: flex;
+   background: #00e0ff;
+   height: 35px;
+   width: 170px;
+   border-radius: 8px;">
       <a href="" Style="Text-decoration: none;
-                        color: white;">
+    color: white;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 21px;
+    font-family: Orbitron;">
         <p>Викторина</p>
       </a>
     </button>
