--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    height: 35px;
    width: 170px;
    border-radius: 8px;">
-      <a href="" Style="Text-decoration: none;
+      <a href="Quiz.html" Style="Text-decoration: none;
     color: white;
     display: flex;
     align-items: center;
