--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <button 
       Style="margin: 0 auto;
    Display: flex;
-   background: #00e0ff;
+   background: none;
    height: 35px;
    width: 170px;
+   border: 5px
    border-radius: 8px;">
       <a href="Quiz.html" Style="Text-decoration: none;
     color: white;
