--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
    background: none;
    height: 35px;
    width: 170px;
-   border: 5px
-   border-radius: 8px;">
+   border: 5px;
+   border-radius: 8px;
+   border-color:#00e0ff">
       <a href="Quiz.html" Style="Text-decoration: none;
     color: white;
     display: flex;
