--- a/Quiz.html
+++ b/Quiz.html
@@ -16,9 +16,9 @@
                 <h1>Congratulations, Quiz Completed.</h1>
 
                 <div class="grade-details">
-                    <p>Attempts : 10</p>
-                    <p>Wrong Answers : <span id="wrong-answers"></span></p>
-                    <p>Right Answers : <span id="right-answers"></span></p>
+                    <p>Попытки : 10</p>
+                    <p>Неправильные ответы : <span id="wrong-answers"></span></p>
+                    <p>Правильные ответы : <span id="right-answers"></span></p>
                     <p>Grade : <span id="grade-percentage"></span>%</p>
                     <p ><span id="remarks"></span></p>
                 </div>
@@ -33,8 +33,8 @@
         <div class="game-quiz-container">
 
             <div class="game-details-container">
-                <h1>Score : <span id="player-score"></span> / 10</h1>
-                <h1> Question : <span id="question-number"></span> / 10</h1>
+                <h1>Очки : <span id="player-score"></span> / 10</h1>
+                <h1> Вопрос : <span id="question-number"></span> / 10</h1>
             </div>
 
             <div class="game-question-container">
@@ -83,7 +83,7 @@
             </div>
 
             <div class="next-button-container">
-                <button onclick="handleNextQuestion()">Next Question</button>
+                <button onclick="handleNextQuestion()">Следущий вопрос</button>
             </div>
 
         </div>
