--- a/Quiz.html
+++ b/Quiz.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="start">Start Quiz!</div>
+        <div id="start">Начнем викторину!</div>
         <div id="quiz" style="display: none">
             <div id="question"></div>
             <div id="qImg"></div>
