--- a/Quiz.html
+++ b/Quiz.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Quiz_style.css">
 </head>
 <body>
-    <div id="container">
+    <div id="container" Style="display:flex; ">
         <div id="start">Начнем викторину!</div>
         <div id="quiz" style="display: none">
             <div id="question"></div>
