--- a/Quiz.html
+++ b/Quiz.html
@@ -24,7 +24,18 @@
             </div>
             <div id="progress"></div>
         </div>
-        <div id="scoreContainer" style="display: none"></div>
+        <div id="scoreContainer" style="display: none">
+            <button>
+                <a href="#" Style="margin: 0 auto;
+    Display: flex;
+    background: none;
+    height: 35px;
+    width: 170px;
+    border: 2px solid #00e0ff;
+    border-radius: 8px;">               
+                </a>
+            </button>
+        </div>
     </div>
     <script src="quiz.js"></script>
 </body>
