--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
    background: none;
    height: 35px;
    width: 170px;
-   border: 5px;
-   border-radius: 8px;
-   border-color:#00e0ff">
+   border: 2px solid #00e0ff;
+   border-radius: 8px;">
       <a href="Quiz.html" Style="Text-decoration: none;
     color: white;
     display: flex;
