--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     margin: 0 auto;
     font-size: 21px;
     font-family: Orbitron;">
-        <p>Викторина</p>
+        <p1>Викторина</p1>
       </a>
     </button>
 
